--- a/content/algorithm-analysis-e414a58f-2e8a-4e39-a94e-d35e40826b16-nav.html
+++ b/content/algorithm-analysis-e414a58f-2e8a-4e39-a94e-d35e40826b16-nav.html
@@ -8,6 +8,9 @@
 <nav>
 <ol>
 <li>
+<a href="leader-election-algorithm-ae4147c1-b063-45fa-81a8-7c1452f8b21c.html">Leader Election Algorithm</a>
+</li>
+<li>
 <a href="how-to-guide-aee4b377-5398-4645-99f0-30e291516437.html">How to guide</a>
 </li>
 <li>
