--- a/content/algorithm-analysis-e414a58f-2e8a-4e39-a94e-d35e40826b16-nav.html
+++ b/content/algorithm-analysis-e414a58f-2e8a-4e39-a94e-d35e40826b16-nav.html
@@ -8,6 +8,9 @@
 <nav>
 <ol>
 <li>
+<a href="leader-election-algorithm-f75d2ac2-047a-411b-a990-251c77ee5cfa.html">Leader Election Algorithm</a>
+</li>
+<li>
 <a href="untitled-631ebda2-d44e-4dfe-ae3b-a529e8574227.html">Untitled</a>
 </li>
 <li>
