--- a/content/algorithm-analysis-e414a58f-2e8a-4e39-a94e-d35e40826b16-nav.html
+++ b/content/algorithm-analysis-e414a58f-2e8a-4e39-a94e-d35e40826b16-nav.html
@@ -8,6 +8,9 @@
 <nav>
 <ol>
 <li>
+<a href="leader-election-algorithm-b7e0c865-1d26-4a6c-b3ae-895d08057ab7.html">Leader Election Algorithm</a>
+</li>
+<li>
 <a href="how-to-guide-aee4b377-5398-4645-99f0-30e291516437.html">How to guide</a>
 </li>
 <li>
